fixing design project card on small devises

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -115,7 +115,6 @@
         position: relative;
         font-size: 1.25rem;
         font-weight: 500;
-        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
 
         &::after {
           content: "";
